--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
     </u>
     <ul>
         <b>
-            <li>NATIONAL UNIVERSTIY, BANGLADESH</li>
+            <li>National University, Bangladesh</li>
         </b>
-        <p>BACHELOR OF SCIENCE(B.SC.) IN CHEMISTRY</p>
+        <p>Bachelor of Science(B.SC.) in Chemistry</p>
         <b>
-            <li>GOVT. RAJENDRA COLLEGE, FARIDPUR</li>
+            <li>Govt. Rajendra College, Faridpur</li>
         </b>
-        <p>SCIENCE, HIGHER SECONDARY SCHOOL CERTIFICATE (H.S.C)</p>
+        <p>Science, Higher Secondery School Certificate (H.S.C)</p>
         <b>
-            <li>FARIDPUR ZILLA SCHOOL, FARIDPUR</li>
+            <li>Faridpur Zilla School, Faridpur</li>
         </b>
-        <p>SCIENCE, SECONDARY SCHOOL CERTIFICATE (S.S.C)</p>
+        <p>Science, Secondery School Certificate (S.S.C)</p>
     </ul>
     <hr>
     <u>
