--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Abid' Resume</title>
+    <style>
+    html{text-align: center;
+    background-color: antiquewhite;}
+    </style>
 </head>
 
 <body>
