--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta charset="UTF-8">
     <title>Abid' Resume</title>
     <style>
-    html{text-align: center;
-    background-color: antiquewhite;}
-    </style>
+        html{text-align: center;
+        background-color: rgb(215, 244, 244);}
+        #bio{text-align: justify;}
+        #elist{text-align: left;}
+        #wlist {text-align: left;}
+        #skills {text-align: left;}
+        #contact {text-align: left;}
+        #portfolio{text-align: left;}
+        </style>
 </head>
 
 <body>
