--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         #wlist {text-align: left;}
         #skills {text-align: left;}
         #contact {text-align: left;}
-        #portfolio{text-align: left;}
+        #Portfolio{text-align: left;}
         </style>
 </head>
 
