--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h2>Hello, I'm</h2>
     <h1>Abid Mahmud</h1>
     <img src="./assets/images/pp_Green_New_circle.png" height="200" alt="Abid Headshot">
-    <p>I'm a Web Designer and Developer with Professional working experience in all sorts of Design works. I’m an expert
+    <p id="bio">I'm a Web Designer and Developer with Professional working experience in all sorts of Design works. I’m an expert
         in Logo and Brand Identity Designs, Marketing
         collaterals, and all sorts Print & Digital Designs and website design. I'm a perfectionist, reliable, prompt,
         quick learner and love what I do.
@@ -30,25 +30,25 @@
     <u>
         <h2>Education</h2>
     </u>
-    <ul>
+    <ul id="elist">
         <b>
-            <li>National University, Bangladesh</li>
+            <li>NATIONAL UNIVERSTIY, BANGLADESH</li>
         </b>
-        <p>Bachelor of Science(B.SC.) in Chemistry</p>
+        <p>BACHELOR OF SCIENCE(B.SC.) IN CHEMISTRY</p>
         <b>
-            <li>Govt. Rajendra College, Faridpur</li>
+            <li>GOVT. RAJENDRA COLLEGE, FARIDPUR</li>
         </b>
-        <p>Science, Higher Secondery School Certificate (H.S.C)</p>
+        <p>SCIENCE, HIGHER SECONDARY SCHOOL CERTIFICATE (H.S.C)</p>
         <b>
-            <li>Faridpur Zilla School, Faridpur</li>
+            <li>FARIDPUR ZILLA SCHOOL, FARIDPUR</li>
         </b>
-        <p>Science, Secondery School Certificate (S.S.C)</p>
+        <p>SCIENCE, SECONDARY SCHOOL CERTIFICATE (S.S.C)</p>
     </ul>
     <hr>
     <u>
         <h2>Work Experience</h2>
     </u>
-    <ul>
+    <ul id="wlist">
         <b>
             <li>FREELANCE GRAPHIC DESIGNER</li>
         </b>
@@ -71,7 +71,7 @@
     <u>
         <h2>Skills</h2>
     </u>
-    <ol>
+    <ol id="skills">
         <li>Web Design</li>
         <li>HTML</li>
         <li>CSS</li>
@@ -82,8 +82,8 @@
     </ol>
     <hr>
     <ul>
-        <li><b><a href="./public/contact.html">Contact Me</a></b> <br></li>
-        <li><b><a href="https://abirabidog.github.io/html-portfolio/">Portfolio</a></b></li>
+        <li id="contact"><b><a href="./public/contact.html">Contact Me</a></b> <br></li>
+        <li id="Portfolio"><b><a href="https://abirabidog.github.io/html-portfolio/">Portfolio</a></b></li>
     </ul>
 
 
