--- a/index.html
+++ b/index.html
@@ -5,22 +5,56 @@
     <meta charset="UTF-8">
     <title>Abid' Resume</title>
     <style>
-        html{text-align: center;
-        background-color: rgb(215, 244, 244);}
-        #bio{text-align: justify;}
-        #elist{text-align: left;}
-        #wlist {text-align: left;}
-        #skills {text-align: left;}
-        #contact {text-align: left;}
-        #Portfolio{text-align: left;}
-        </style>
+        html {
+            background-color: rgb(215, 244, 244);
+        }
+
+        #title {
+            text-align: center;
+        }
+
+        #name {
+            text-align: center;
+        }
+
+        #image {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        #bio {
+            text-align: justify;
+        }
+
+        #elist {
+            text-align: left;
+        }
+
+        #wlist {
+            text-align: left;
+        }
+
+        #skills {
+            text-align: left;
+        }
+
+        #contact {
+            text-align: left;
+        }
+
+        #Portfolio {
+            text-align: left;
+        }
+    </style>
 </head>
 
 <body>
-    <h2>Hello, I'm</h2>
-    <h1>Abid Mahmud</h1>
-    <img src="./assets/images/pp_Green_New_circle.png" height="200" alt="Abid Headshot">
-    <p id="bio">I'm a Web Designer and Developer with Professional working experience in all sorts of Design works. I’m an expert
+    <h2 id="title">Hello, I'm</h2>
+    <h1 id="name">Abid Mahmud</h1>
+    <img id="image" src="./assets/images/pp_Green_New_circle.png" height="200" alt="Abid Headshot">
+    <p id="bio">I'm a Web Designer and Developer with Professional working experience in all sorts of Design works. I’m
+        an expert
         in Logo and Brand Identity Designs, Marketing
         collaterals, and all sorts Print & Digital Designs and website design. I'm a perfectionist, reliable, prompt,
         quick learner and love what I do.
