--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <style>
         html {
             background-color: rgb(215, 244, 244);
+            margin: 20px 20px;
         }
 
         #title {
